[Configure]: API GATEWAY